--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -55,54 +55,27 @@
                             labels="spreadAverageLabels" series="spreadAverageSeries">
                     </canvas>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Preference Profile</h3>
-                </div>
-                <div class="panel-body">
-                    <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
-                            labels="typeLabels"></canvas>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <th></th>
-                        <th>Total</th>
-                        <th>Total Alcohol</th>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th>Pilsner</th>
-                            <td>{{profile.totPilsner}} cl</td>
-                            <td>{{profile.totAlcPilsner | number:2}} cl</td>
-                        </tr>
-                        <tr>
-                            <th>Strong Beer</th>
-                            <td>{{profile.totStrongbeer}} cl</td>
-                            <td>{{profile.totAlcStrongbeer | number:2}} cl</td>
-                        </tr>
-                        <tr>
-                            <th>Wine</th>
-                            <td>{{profile.totWine}} cl</td>
-                            <td>{{profile.totAlcWine | number:2}} cl</td>
-                        </tr>
-                        <tr>
-                            <th>Liquor</th>
-                            <td>{{profile.totLiquor}} cl</td>
-                            <td>{{profile.totAlcLiquor | number:2}} cl</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="panel-body text-center">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getSpreadAverageChartData(365)"
+                                ng-class="{active: nbSpreadAverageDaysShown === 365}">
+                            1 Year
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getSpreadAverageChartData(90)"
+                                ng-class="{active: nbSpreadAverageDaysShown === 90}">
+                            3 Months
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getSpreadAverageChartData(30)"
+                                ng-class="{active: nbSpreadAverageDaysShown === 30}">
+                            1 Month
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getSpreadAverageChartData(7)"
+                                ng-class="{active: nbSpreadAverageDaysShown === 7}">
+                            1 Week
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Week Profile</h3>
@@ -162,6 +135,46 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
+                    <h3 class="panel-title">Preference Profile</h3>
+                </div>
+                <div class="panel-body">
+                    <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
+                            labels="typeLabels"></canvas>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <th></th>
+                        <th>Total</th>
+                        <th>Total Alcohol</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th>Pilsner</th>
+                            <td>{{profile.totPilsner}} cl</td>
+                            <td>{{profile.totAlcPilsner | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Strong Beer</th>
+                            <td>{{profile.totStrongbeer}} cl</td>
+                            <td>{{profile.totAlcStrongbeer | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Wine</th>
+                            <td>{{profile.totWine}} cl</td>
+                            <td>{{profile.totAlcWine | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Liquor</th>
+                            <td>{{profile.totLiquor}} cl</td>
+                            <td>{{profile.totAlcLiquor | number:2}} cl</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
                     <h3 class="panel-title">Cumulative Drinking Trend</h3>
                 </div>
                 <div class="panel-body">
@@ -170,44 +183,25 @@
                             labels="cumulativeTrendLabels" series="cumulativeTrendSeries">
                     </canvas>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Alcohol Data</h3>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-striped table-condensed table-hover">
-                        <thead>
-                        <tr>
-                            <th class="col-xs-3">Date</th>
-                            <th class="col-xs-3">Daily</th>
-                            <th class="col-xs-3">Cumulative</th>
-                            <th class="col-xs-3">7-day Trend</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="dailyAnalysis in dailyAnalyses | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize">
-                            <td>{{dailyAnalysis.date | date:'dd/MM/yy'}}</td>
-                            <td>{{dailyAnalysis.todAlc | number:2}}</td>
-                            <td>{{dailyAnalysis.cumAlc | number:2}}</td>
-                            <td>{{dailyAnalysis.spreadAverage | number:2}}</td>
-                        </tr>
-                        </tbody>
-                        <tfoot>
-                        <tr ng-hide="!dailyAnalyses" ng-init="pageSize = 25">
-                            <th colspan="50">
-                                <div class="row">
-                                    <div class="col-md-offset-6 col-md-6 text-right">
-                                        <pagination ng-init="currentPage = 1" total-items="dailyAnalyses.length"
-                                                    ng-model="currentPage"
-                                                    items-per-page="pageSize" class="pagination-sm" max-size="10"
-                                                    previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
-                                    </div>
-                                </div>
-                            </th>
-                        </tr>
-                        </tfoot>
-                    </table>
+                <div class="panel-body text-center">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getCumulativeChartData(365)"
+                                ng-class="{active: nbCumulativeDaysShown === 365}">
+                            1 Year
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getCumulativeChartData(90)"
+                                ng-class="{active: nbCumulativeDaysShown === 90}">
+                            3 Months
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getCumulativeChartData(30)"
+                                ng-class="{active: nbCumulativeDaysShown === 30}">
+                            1 Month
+                        </button>
+                        <button type="button" class="btn btn-sm btn-default" ng-click="getCumulativeChartData(7)"
+                                ng-class="{active: nbCumulativeDaysShown === 7}">
+                            1 Week
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
