--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -11,7 +11,7 @@
             <thead>
             <tr>
                 <th class="col-xs-2">Day</th>
-                <th class="col-xs-2">Pilser (cl)</th>
+                <th class="col-xs-2">Pilsner (cl)</th>
                 <th class="col-xs-2">Strong Beer (cl)</th>
                 <th class="col-xs-2">Wine (cl)</th>
                 <th class="col-xs-2">Liquor (cl)</th>
