--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -10,38 +10,58 @@
     <div class="row">
         <div class="col-md-9">
 
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Group Trend</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Super Cup</h3>
+                        </div>
+                        <div class="panel-body">
+                            <table class="table table-condensed">
+                                <tr ng-repeat="rank in ranking.rankingSuperCup | limitTo:20" ng-class="{active: $index === 0}">
+                                    <td class="col-xs-2">{{$index + 1}}</td>
+                                    <td class="col-xs-6">{{rank.user.username}}</td>
+                                    <td class="col-xs-4 text-right">{{rank.value}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-                <div class="panel-body">
-                    <canvas id="groupTrend" class="chart chart-line" data="groupTrendData"
-                            options="groupTrendDataOptions" legend="true"
-                            labels="groupTrendLabels" series="groupTrendSeries">
-                    </canvas>
-                </div>
-                <div class="panel-body text-center">
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(365)"
-                                ng-class="{active: nbGroupDaysShown === 365}">
-                            1 Year
-                        </button>
-                        <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(90)"
-                                ng-class="{active: nbGroupDaysShown === 90}">
-                            3 Months
-                        </button>
-                        <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(30)"
-                                ng-class="{active: nbGroupDaysShown === 30}">
-                            1 Month
-                        </button>
-                        <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(7)"
-                                ng-class="{active: nbGroupDaysShown === 7}">
-                            1 Week
-                        </button>
+
+                <div class="col-md-9">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Group Trend</h3>
+                        </div>
+                        <div class="panel-body">
+                            <canvas id="groupTrend" class="chart chart-line" data="groupTrendData"
+                                    options="groupTrendDataOptions" legend="true"
+                                    labels="groupTrendLabels" series="groupTrendSeries">
+                            </canvas>
+                        </div>
+                        <div class="panel-body text-center">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(365)"
+                                        ng-class="{active: nbGroupDaysShown === 365}">
+                                    1 Year
+                                </button>
+                                <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(90)"
+                                        ng-class="{active: nbGroupDaysShown === 90}">
+                                    3 Months
+                                </button>
+                                <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(30)"
+                                        ng-class="{active: nbGroupDaysShown === 30}">
+                                    1 Month
+                                </button>
+                                <button type="button" class="btn btn-sm btn-default" ng-click="drawGroupChart(7)"
+                                        ng-class="{active: nbGroupDaysShown === 7}">
+                                    1 Week
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
 
             <div class="panel panel-danger">
                 <div class="panel-heading">
@@ -52,25 +72,17 @@
                         <div class="col-sm-4">
                             <trophy-ranking trophy-name="Consistency Trophy"
                                             ranking="ranking.rankingConsistencyFactor"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Habitual Drinker Trophy"
-                                            ranking="ranking.rankingDrinkingDayRate"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Binge Trophy"
-                                            ranking="ranking.rankingHighestBinge"></trophy-ranking>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
                             <trophy-ranking trophy-name="Weekend Trophy"
                                             ranking="ranking.rankingWeekend"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
+                            <trophy-ranking trophy-name="Habitual Drinker Trophy"
+                                            ranking="ranking.rankingDrinkingDayRate"></trophy-ranking>
                             <trophy-ranking trophy-name="Sunday Trophy" ranking="ranking.rankingSun"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
+                            <trophy-ranking trophy-name="Binge Trophy"
+                                            ranking="ranking.rankingHighestBinge"></trophy-ranking>
                             <trophy-ranking trophy-name="Working Week Trophy"
                                             ranking="ranking.rankingWorkWeek"></trophy-ranking>
                         </div>
@@ -87,25 +99,17 @@
                         <div class="col-sm-4">
                             <trophy-ranking trophy-name="Pilsner Trophy"
                                             ranking="ranking.rankingPilsner"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Whisky Trophy"
-                                            ranking="ranking.rankingLiquor"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Happy Loner Trophy"
-                                            ranking="ranking.rankingHappyLoner"></trophy-ranking>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
                             <trophy-ranking trophy-name="Trappist Trophy"
                                             ranking="ranking.rankingStrongbeer"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
+                            <trophy-ranking trophy-name="Whisky Trophy"
+                                            ranking="ranking.rankingLiquor"></trophy-ranking>
                             <trophy-ranking trophy-name="Wine Trophy" ranking="ranking.rankingWine"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
+                            <trophy-ranking trophy-name="Happy Loner Trophy"
+                                            ranking="ranking.rankingHappyLoner"></trophy-ranking>
                             <trophy-ranking trophy-name="Sad Loner Trophy"
                                             ranking="ranking.rankingSadLoner"></trophy-ranking>
                         </div>
@@ -113,7 +117,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-info">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Day Trophies</h3>
                 </div>
@@ -121,23 +125,15 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <trophy-ranking trophy-name="Monday Trophy" ranking="ranking.rankingMon"></trophy-ranking>
+                            <trophy-ranking trophy-name="Tuesday Trophy" ranking="ranking.rankingTue"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
                             <trophy-ranking trophy-name="Wednesday Trophy"
                                             ranking="ranking.rankingWed"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Friday Trophy" ranking="ranking.rankingFri"></trophy-ranking>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <trophy-ranking trophy-name="Tuesday Trophy" ranking="ranking.rankingTue"></trophy-ranking>
-                        </div>
-                        <div class="col-sm-4">
                             <trophy-ranking trophy-name="Thursday Trophy" ranking="ranking.rankingThu"></trophy-ranking>
                         </div>
                         <div class="col-sm-4">
+                            <trophy-ranking trophy-name="Friday Trophy" ranking="ranking.rankingFri"></trophy-ranking>
                             <trophy-ranking trophy-name="Saturday Trophy" ranking="ranking.rankingSat"></trophy-ranking>
                         </div>
                     </div>
