--- a/packages/custom/ddb/public/views/templates/trophy-ranking.html
+++ b/packages/custom/ddb/public/views/templates/trophy-ranking.html
@@ -1,12 +1,18 @@
 <table class="table table-condensed">
     <thead>
     <tr>
-        <th colspan="3">{{trophyName}}</th>
+        <th colspan="3" class="text-center">{{trophyName}}</th>
     </tr>
     </thead>
-    <tr ng-repeat="rank in ranking | limitTo:3" ng-class="{active: $index === 0}">
+    <tr ng-repeat="rank in ranking | limitTo:(showMore ? 20 : 3)" ng-class="{active: $index === 0}">
         <td class="col-xs-2">{{$index + 1}}</td>
         <td class="col-xs-6">{{rank.user.username}}</td>
         <td class="col-xs-4 text-right">{{rank.value | number:2}}</td>
+    </tr>
+    <tr ng-hide="showMore">
+        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=true"><small>Show more..</small></a></td>
+    </tr>
+    <tr ng-show="showMore">
+        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=false"><small>Show less..</small></a></td>
     </tr>
 </table>
