New measurements page

--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -1,7 +1,7 @@
 div.navbar-brand {
     background: #fdc026; /* Old browsers */
-    background: -moz-linear-gradient(left,  #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#fdc026), color-stop(29%,#feac00), color-stop(54%,#f19700), color-stop(100%,#d98005)); /* Chrome,Safari4+ */
+    background: -moz-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #fdc026), color-stop(29%, #feac00), color-stop(54%, #f19700), color-stop(100%, #d98005)); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* Chrome10+,Safari5.1+ */
     background: -o-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* IE10+ */
@@ -39,8 +39,7 @@ a.logo {
 }
 
 .navbar-nav > li > a.active {
-    border-bottom: 3px solid #F19700
-    !important;
+    border-bottom: 3px solid #F19700 !important;
 }
 
 .navbar {
@@ -61,4 +60,18 @@ a.logo {
 
 tr.active {
     font-weight: bold;
+}
+
+.table-collapse tr.row-collapse td {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    border-top: 0px
+}
+
+.table-collapse tbody:nth-child(2n+1) {
+    background-color: #f9f9f9;
+}
+
+.today {
+    background-color: #d9edf7;
 }
