--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-striped table-condensed table-hover">
+        <table class="table table-condensed table-collapse">
             <thead>
             <tr>
                 <th class="col-xs-2">Day</th>
@@ -18,24 +18,90 @@
                 <th class="col-xs-2"></th>
             </tr>
             </thead>
-            <tbody>
-            <tr ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize"
-                ng-class="{info: isToday(measurement.date)}">
+            <tbody ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize"
+                   ng-class="{today: isToday(measurement.date)}">
+            <tr ng-click="selectMeasurement(measurement)" style="cursor: pointer">
                 <td>{{measurement.date | date:'dd/MM/yy'}}</td>
                 <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
-                           ng-change="isDirty = true"></td>
+                           ng-blur="save(measurement)"></td>
                 <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
-                           ng-change="isDirty = true"></td>
+                           ng-blur="save(measurement)"></td>
                 <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
-                           ng-change="isDirty = true"></td>
+                           ng-blur="save(measurement)"></td>
                 <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
-                           ng-change="isDirty = true"></td>
-                <td class="text-right">
-                    <button class="btn btn-sm btn-primary" ng-click="save(measurement); isDirty = false"
-                            ng-show="isDirty" ng-disabled="!isValid(measurement)" type="submit">
-                        <i class="glyphicon glyphicon-save"></i> Save
-                    </button>
+                           ng-blur="save(measurement)"></td>
+                <td>
+                    <div class="spinner" ng-show="status[measurement.date] === 'saving'">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </div>
+                    <div>
+                        <i class="glyphicon glyphicon-saved text-success"
+                           ng-show="status[measurement.date] === 'saved'"/>
+                    </div>
+                    <div>
+                        <i class="glyphicon glyphicon-warning-sign text-danger"
+                           ng-show="status[measurement.date] === 'failed'"/>
+                    </div>
                 </td>
+            </tr>
+            <tr collapse="selectedMeasurement !== measurement" class="row-collapse">
+                <td></td>
+                <td class="text-center">
+                    <div class="btn-group" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                                ng-disabled="disabled">
+                            Add <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#" ng-click="addPilsner(measurement, 25)">25 cl</a></li>
+                            <li><a href="#" ng-click="addPilsner(measurement,33)">33 cl</a></li>
+                            <li><a href="#" ng-click="addPilsner(measurement,50)">50 cl</a></li>
+                        </ul>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <div class="btn-group" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                                ng-disabled="disabled">
+                            Add <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#" ng-click="addStrongbeer(measurement,25)">25 cl</a></li>
+                            <li><a href="#" ng-click="addStrongbeer(measurement,33)">33 cl</a></li>
+                        </ul>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <div class="btn-group" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                                ng-disabled="disabled">
+                            Add <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#" ng-click="addWine(measurement,12)">Small glass (12 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(measurement,17.5)">Medium glass (17.5 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(measurement,25)">Large glass (25 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(measurement,75)">Bottle (75 cl)</a></li>
+                        </ul>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <div class="col-md-3">
+                        <div class="btn-group" dropdown>
+                            <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                                    ng-disabled="disabled">
+                                Add <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#" ng-click="addLiquor(measurement,2.5)">Single shot (2.5 cl)</a></li>
+                                <li><a href="#" ng-click="addLiquor(measurement,4.5)">Double shot (4.5 cl)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </td>
+                <td></td>
             </tr>
             </tbody>
             <tfoot>
