--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -75,3 +75,9 @@ tr.active {
 .today {
     background-color: #d9edf7;
 }
+
+@media (max-width: 767px) {
+    .navbar-nav .open .dropdown-menu {
+        background-color: #fff;
+    }
+}
