--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -8,7 +8,7 @@
   <title>{{appName}}</title>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs, swig">
-  <meta name="description" content="Beerkeeper - The social drinking network">
+  <meta name="description" content="Beerkeeper - The social drinking network. Keep track of what you drink. Analyse the statistics. Compare them with friends!">
 
   <meta property="fb:app_id" content="APP_ID">
   <meta property="og:title" content="{{appName}}">
