--- a/packages/custom/ddb/public/views/home.html
+++ b/packages/custom/ddb/public/views/home.html
@@ -1,6 +1,10 @@
 <div data-ng-controller="DdbHomeController">
 
-    <div style="font-size: 10vw; color: #eee; margin-top: 20vh" class="text-center">Beerkeeper</div>
+    <div class="jumbotron beer-gradient">
+        <section class="container">
+            <object type="image/svg+xml" data="ddb/assets/img/logo.svg" style="width: 30vw"/>
+
+        </section>
+    </div>
 
 </div>
-
