--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="navbar-brand" href="#">
-                <a ui-sref="home" class="logo">Beerkeeper</a>
+                <a href="#" ui-sref="news">
+                    <img src="ddb/assets/img/logo.png" style="height: 30px"/>
+                </a>
             </div>
         </div>
 
