--- a/packages/custom/ddb/public/views/authenticationparent.html
+++ b/packages/custom/ddb/public/views/authenticationparent.html
@@ -1,3 +1,3 @@
-<div class="container" ng-controller="AuthCtrl" ng-class="($state.is('auth.register')) ? 'register-form' : ''">
+<div ng-controller="AuthCtrl" ng-class="($state.is('auth.register')) ? 'register-form' : ''">
     <div ui-view></div>
 </div>
