--- a/packages/custom/ddb/public/views/login.html
+++ b/packages/custom/ddb/public/views/login.html
@@ -1,31 +1,48 @@
 <div data-ng-controller="LoginCtrl as login">
 
-    <div class="alert alert-danger animated fadeIn" ng-show="login.loginError">{{login.loginError}}</div>
-    <h2>Login</h2>
+    <div class="jumbotron beer-gradient">
+        <section class="container">
 
-    <form id="login_form" ng-submit="login.login()">
-        <div class="form-group">
-            <label for="email_block">E-mail address</label>
-            <input required id="email_block" type="email" name="email" placeholder="E-mail Address"
-                   ng-model="login.user.email" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="password_block">Password</label>
-            <input required id="password_block" name="password" type="{{login.input.type}}"
-                   placeholder="{{login.input.placeholder}}" ng-model="login.user.password"
-                   class="form-control">
-        </div>
+            <div clas="row">
+                <div class="col-md-6">
+                    <h1>Beerkeeper</h1>
 
-        <div class="row">
-            <div class="col-xs-6">
-                <button type="submit" class="btn btn-primary">Login</button>
+                    <p>The social drinking network</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="alert alert-danger animated fadeIn" ng-show="login.loginError">
+                        {{login.loginError}}
+                    </div>
+                    <h2>Login</h2>
+
+                    <form id="login_form" ng-submit="login.login()">
+                        <div class="form-group">
+                            <label for="email_block">E-mail address</label>
+                            <input required id="email_block" type="email" name="email" placeholder="E-mail Address"
+                                   ng-model="login.user.email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="password_block">Password</label>
+                            <input required id="password_block" name="password" type="{{login.input.type}}"
+                                   placeholder="{{login.input.placeholder}}" ng-model="login.user.password"
+                                   class="form-control">
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button type="submit" class="btn btn-warning">Login</button>
+                            </div>
+                            <div class="col-md-6 text-right">
+                                <p>Not registered yet?
+                                    <a ui-sref='auth.register'>Sign up</a>
+                                </p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="col-xs-6 text-right">
-                <p>Not registered yet?
-                    <a ui-sref='auth.register'>Sign up</a>
-                </p>
-            </div>
-        </div>
-    </form>
+
+        </section>
+    </div>
 
 </div>
