--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -1,152 +1,151 @@
-<div class="" data-ng-controller="DdbMeasurementsController">
+<section class="container">
+    <div class="" data-ng-controller="DdbMeasurementsController">
 
-    <div class="page-header">
-        <h1>Drinking Data<br class="visible-xs"/>
-            <small>for {{user.user.username}}</small>
-        </h1>
-    </div>
-
-    <div class="row" ng-if="!measurements.length">
-        <div class="col-xs-12 ">
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
+        <div class="page-header">
+            <h1>Drinking Data<br class="visible-xs"/>
+                <small>for {{user.user.username}}</small>
+            </h1>
         </div>
-    </div>
 
-    <div class="panel panel-primary" ng-if="measurements.length">
-        <div class="panel-heading">
-            <h3 class="panel-title">Today's drinks</h3>
-        </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-sm-3">
-                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
-                                ng-disabled="disabled">
-                            Add Pilsner <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" style="width: 100%">
-                            <li><a href="#" ng-click="addPilsner(25)">25 cl</a></li>
-                            <li><a href="#" ng-click="addPilsner(33)">33 cl</a></li>
-                            <li><a href="#" ng-click="addPilsner(50)">50 cl</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
-                                ng-disabled="disabled">
-                            Add Strong Beer <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" style="width: 100%">
-                            <li><a href="#" ng-click="addStrongbeer(25)">25 cl</a></li>
-                            <li><a href="#" ng-click="addStrongbeer(33)">33 cl</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
-                                ng-disabled="disabled">
-                            Add Wine <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" style="width: 100%">
-                            <li><a href="#" ng-click="addWine(12)">Small glass (12 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(17.5)">Medium glass (17.5 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(25)">Large glass (25 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(75)">Bottle (75 cl)</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
-                                ng-disabled="disabled">
-                            Add Liquor <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" style="width: 100%">
-                            <li><a href="#" ng-click="addLiquor(2.5)">Single shot (2.5 cl)</a></li>
-                            <li><a href="#" ng-click="addLiquor(4.5)">Double shot (4.5 cl)</a></li>
-                        </ul>
-                    </div>
+        <div class="row" ng-if="!measurements.length">
+            <div class="col-xs-12 ">
+                <div class="spinner">
+                    <div class="bounce1"></div>
+                    <div class="bounce2"></div>
+                    <div class="bounce3"></div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Past Drinks</h3>
-        </div>
-        <div class="panel-body">
-            <div class="table-responsive">
-                <table class="table table-condensed table-collapse">
-                    <thead>
-                    <tr>
-                        <th class="col-xs-3">
-                            <small>Pilsner</small>
-                            <span class="hidden-xs">(cl)</span></th>
-                        <th class="col-xs-3">
-                            <small>Strong Beer</small>
-                            <span class="hidden-xs">(cl)</span></th>
-                        <th class="col-xs-3">
-                            <small>Wine</small>
-                            <span class="hidden-xs">(cl)</span></th>
-                        <th class="col-xs-3">
-                            <small>Liquor</small>
-                            <span class="hidden-xs">(cl)</span></th>
-                    </tr>
-                    </thead>
-                    <tbody ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize">
-                    <tr>
-                        <th colspan="1" class="text-left">
-                            {{measurement.date | date:'EEE dd/MM/yy'}}
-                        </th>
-                        <th colspan="3" class="text-right">
-                            <div class="spinner" ng-show="status[measurement.date] === 'saving'">
-                                <div class="bounce1"></div>
-                                <div class="bounce2"></div>
-                                <div class="bounce3"></div>
-                            </div>
-                            <div class="text-success" ng-show="status[measurement.date] === 'saved'">
-                                Saved <i class="glyphicon glyphicon-saved"/>
-                            </div>
-                            <div class="text-danger" ng-show="status[measurement.date] === 'failed'">
-                                Error saving <i class="glyphicon glyphicon-warning-sign"/>
-                            </div>
-                        </th>
-                    </tr>
-                    <tr class="row-collapse">
-                        <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
-                                   ng-blur="save(measurement)"></td>
-                        <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
-                                   ng-blur="save(measurement)"></td>
-                        <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
-                                   ng-blur="save(measurement)"></td>
-                        <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
-                                   ng-blur="save(measurement)"></td>
-                    </tr>
-                    </tbody>
-                    <tfoot>
-                    <tr ng-hide="!measurements" ng-init="pageSize = 25">
-                        <th colspan="50">
-                            <div class="text-right">
-                                <pagination ng-init="currentPage = 1" total-items="measurements.length"
-                                            ng-model="currentPage"
-                                            items-per-page="pageSize" class="pagination-sm" max-size="10"
-                                            previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
-                            </div>
-                        </th>
-                    </tr>
-                    </tfoot>
-                </table>
+
+        <div class="panel panel-primary" ng-if="measurements.length">
+            <div class="panel-heading">
+                <h3 class="panel-title">Today's drinks</h3>
             </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                                    ng-disabled="disabled">
+                                Add Pilsner <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" style="width: 100%">
+                                <li><a href="#" ng-click="addPilsner(25)">25 cl</a></li>
+                                <li><a href="#" ng-click="addPilsner(33)">33 cl</a></li>
+                                <li><a href="#" ng-click="addPilsner(50)">50 cl</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                                    ng-disabled="disabled">
+                                Add Strong Beer <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" style="width: 100%">
+                                <li><a href="#" ng-click="addStrongbeer(25)">25 cl</a></li>
+                                <li><a href="#" ng-click="addStrongbeer(33)">33 cl</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                                    ng-disabled="disabled">
+                                Add Wine <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" style="width: 100%">
+                                <li><a href="#" ng-click="addWine(12)">Small glass (12 cl)</a></li>
+                                <li><a href="#" ng-click="addWine(17.5)">Medium glass (17.5 cl)</a></li>
+                                <li><a href="#" ng-click="addWine(25)">Large glass (25 cl)</a></li>
+                                <li><a href="#" ng-click="addWine(75)">Bottle (75 cl)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                            <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                                    ng-disabled="disabled">
+                                Add Liquor <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" style="width: 100%">
+                                <li><a href="#" ng-click="addLiquor(2.5)">Single shot (2.5 cl)</a></li>
+                                <li><a href="#" ng-click="addLiquor(4.5)">Double shot (4.5 cl)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Past Drinks</h3>
+            </div>
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table class="table table-condensed table-collapse">
+                        <thead>
+                        <tr>
+                            <th class="col-xs-3">
+                                <small>Pilsner</small>
+                                <span class="hidden-xs">(cl)</span></th>
+                            <th class="col-xs-3">
+                                <small>Strong Beer</small>
+                                <span class="hidden-xs">(cl)</span></th>
+                            <th class="col-xs-3">
+                                <small>Wine</small>
+                                <span class="hidden-xs">(cl)</span></th>
+                            <th class="col-xs-3">
+                                <small>Liquor</small>
+                                <span class="hidden-xs">(cl)</span></th>
+                        </tr>
+                        </thead>
+                        <tbody ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize">
+                        <tr>
+                            <th colspan="1" class="text-left">
+                                {{measurement.date | date:'EEE dd/MM/yy'}}
+                            </th>
+                            <th colspan="3" class="text-right">
+                                <div class="spinner" ng-show="status[measurement.date] === 'saving'">
+                                    <div class="bounce1"></div>
+                                    <div class="bounce2"></div>
+                                    <div class="bounce3"></div>
+                                </div>
+                                <div class="text-success" ng-show="status[measurement.date] === 'saved'">
+                                    Saved <i class="glyphicon glyphicon-saved"/>
+                                </div>
+                                <div class="text-danger" ng-show="status[measurement.date] === 'failed'">
+                                    Error saving <i class="glyphicon glyphicon-warning-sign"/>
+                                </div>
+                            </th>
+                        </tr>
+                        <tr class="row-collapse">
+                            <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
+                                       ng-blur="save(measurement)"></td>
+                            <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
+                                       ng-blur="save(measurement)"></td>
+                            <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
+                                       ng-blur="save(measurement)"></td>
+                            <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
+                                       ng-blur="save(measurement)"></td>
+                        </tr>
+                        </tbody>
+                        <tfoot>
+                        <tr ng-hide="!measurements" ng-init="pageSize = 25">
+                            <th colspan="50">
+                                <div class="text-right">
+                                    <pagination ng-init="currentPage = 1" total-items="measurements.length"
+                                                ng-model="currentPage"
+                                                items-per-page="pageSize" class="pagination-sm" max-size="10"
+                                                previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
+                                </div>
+                            </th>
+                        </tr>
+                        </tfoot>
+                    </table>
+                </div>
 
-
+            </div>
         </div>
     </div>
-
-</div>
-
+</section>
