--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -38,6 +38,7 @@
                             <div class="panel-body">
                                 <canvas id="groupTrend" class="chart chart-line" data="groupTrendData"
                                         options="groupTrendDataOptions" legend="true"
+                                        colours="['#FF6700', '#FFBF00','#FF001E','#26B600,','#000000', '#1771FF','#FFA200', '#00FFD4']"
                                         labels="groupTrendLabels" series="groupTrendSeries">
                                 </canvas>
                             </div>
