--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -53,6 +53,7 @@
                     <div class="panel-body">
                         <canvas id="spreadTrend" class="chart chart-line" data="spreadAverageData"
                                 options="spreadAverageDataOptions"
+                                colours="['#FF6700', '#FFBF00','#FF001E','#26B600,','#000000', '#1771FF','#FFA200', '#00FFD4']"
                                 labels="spreadAverageLabels" series="spreadAverageSeries">
                         </canvas>
                     </div>
@@ -86,6 +87,7 @@
                     </div>
                     <div class="panel-body">
                         <canvas id="weekRadar" class="chart chart-radar" data="weekProfileData"
+                                colours="['#FF6700', '#FFBF00','#FF001E','#26B600,','#000000', '#1771FF','#FFA200', '#00FFD4']"
                                 labels="weekLabels"></canvas>
                     </div>
                     <div class="panel-body">
@@ -143,6 +145,7 @@
                     </div>
                     <div class="panel-body">
                         <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
+                                colours="['#FF6700', '#FFBF00','#FF001E','#26B600,','#000000', '#1771FF','#FFA200', '#00FFD4']"
                                 labels="typeLabels"></canvas>
                     </div>
                     <div class="panel-body">
@@ -184,6 +187,7 @@
                     <div class="panel-body">
                         <canvas id="cumulativeTrend" class="chart chart-line" data="cumulativeTrendData"
                                 options="cumulativeTrendDataOptions"
+                                colours="['#FF6700', '#FFBF00','#FF001E','#26B600,','#000000', '#1771FF','#FFA200', '#00FFD4']"
                                 labels="cumulativeTrendLabels" series="cumulativeTrendSeries">
                         </canvas>
                     </div>
